--- a/webapp/home/templates/index.html
+++ b/webapp/home/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>Welcome to the Environmental Data Initiative Dashboard</h1>
+    <h1 align="center">Welcome to the Environmental Data Initiative Dashboard</h1>
 {% endblock %}
