Add about.html to home base.html and routes

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -21,7 +21,7 @@
         <div class="navbar-collapse collapse" id="top-navbar">
             <ul class="nav navbar-nav">
                 <li class="active">
-                    <a href="{{ url_for('home.index') }}" title="About">About</a>
+                    <a href="{{ url_for('home.about') }}" title="About">About</a>
                 </li>
                 <li class="dropdown">
                     <a aria-expanded="false" aria-haspopup="true"
