Add support for level 2 at a glance status

--- a/webapp/home/templates/index.html
+++ b/webapp/home/templates/index.html
@@ -1,5 +1,122 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1 align="center">Welcome to the Environmental Data Initiative Dashboard</h1>
+<h1 align="center">State of Health at a glance</h1>
+
+<h3 align="left">PASTA Server Infrastructure</h3>
+<table class="table table-bordered">
+    <tr>
+        <th width="20%" style="text-align: center">Tier</th>
+        <th style="text-align: center">Status</th>
+    </tr>
+    <tr>
+        <td align="center">Production</td>
+        <td class="{{ status['production'][0] }}">{{ status['production'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">Staging</td>
+        <td class="{{ status['staging'][0] }}">{{ status['staging'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">Development</td>
+        <td class="{{ status['development'][0] }}">{{ status['development'][1] }}</td>
+    </tr>
+</table>
+
+<h3 align="left">EDI Portals</h3>
+<table class="table table-bordered">
+    <tr>
+        <th width="20%" style="text-align: center">Tier</th>
+        <th style="text-align: center">Status</th>
+    </tr>
+    <tr>
+        <td align="center">Production</td>
+        <td class="{{ status['edi_portal'][0] }}">{{ status['edi_portal'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">Staging</td>
+        <td class="{{ status['edi_portal_s'][0] }}">{{ status['edi_portal_s'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">Development</td>
+        <td class="{{ status['edi_portal_d'][0] }}">{{ status['edi_portal_d'][1] }}</td>
+    </tr>
+</table>
+
+<h3 align="left">LTER Portals</h3>
+<table class="table table-bordered">
+    <tr>
+        <th width="20%" style="text-align: center">Tier</th>
+        <th style="text-align: center">Status</th>
+    </tr>
+    <tr>
+        <td align="center">Production</td>
+        <td class="{{ status['lter_portal'][0] }}">{{ status['lter_portal'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">Staging</td>
+        <td class="{{ status['lter_portal_s'][0] }}">{{ status['lter_portal_s'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">Development</td>
+        <td class="{{ status['lter_portal_d'][0] }}">{{ status['lter_portal_d'][1] }}</td>
+    </tr>
+</table>
+
+<h3 align="left">EDI GMN</h3>
+<table class="table table-bordered">
+    <tr>
+        <th width="20%" style="text-align: center">Tier</th>
+        <th style="text-align: center">Status</th>
+    </tr>
+    <tr>
+        <td align="center">Production</td>
+        <td class="{{ status['edi_gmn'][0] }}">{{ status['edi_gmn'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">Staging</td>
+        <td class="{{ status['edi_gmn_s'][0] }}">{{ status['edi_gmn_s'][1] }}</td>
+    </tr>
+</table>
+
+<h3 align="left">LTER GMN</h3>
+<table class="table table-bordered">
+    <tr>
+        <th width="20%" style="text-align: center">Tier</th>
+        <th style="text-align: center">Status</th>
+    </tr>
+    <tr>
+        <td align="center">Production</td>
+        <td class="{{ status['lter_gmn'][0] }}">{{ status['lter_gmn'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">Staging</td>
+        <td class="{{ status['lter_gmn_s'][0] }}">{{ status['lter_gmn_s'][1] }}</td>
+    </tr>
+</table>
+
+<h3 align="left">Related Services</h3>
+<table class="table table-bordered">
+    <tr>
+        <th width="20%" style="text-align: center">Service</th>
+        <th style="text-align: center">Status</th>
+    </tr>
+    <tr>
+        <td align="center">EDI LDAP</td>
+        <td class="{{ status['edi_ldap'][0] }}">{{ status['edi_ldap'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">LTER LDAP</td>
+        <td class="{{ status['lter_ldap'][0] }}">{{ status['lter_ldap'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">Unit Registry</td>
+        <td class="{{ status['unit_registry'][0] }}">{{ status['unit_registry'][1] }}</td>
+    </tr>
+    <tr>
+        <td align="center">Controlled Vocabulary</td>
+        <td class="{{ status['controlled_vocabulary'][0] }}">{{ status['controlled_vocabulary'][1] }}</td>
+    </tr>
+</table>
+
 {% endblock %}
