Update the reports. Small correction to the offline report HTML.

--- a/webapp/reports/templates/report_offline.html
+++ b/webapp/reports/templates/report_offline.html
@@ -20,7 +20,8 @@
     {% endfor %}
     </table>
 
-    <h2>Data Resources</h2>
+    <h2>Inaccessible PASTA Data Packages</h2>
+    <p>Metadata for the following data packages could not be read</p>
     <table class="table table-striped">
     <tr>
         <th>Package ID</th>
