Refactor to use new heath_check class

--- a/webapp/home/templates/index.html
+++ b/webapp/home/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block app_content %}
 <h1 align="center">State of Health at a glance</h1>
+<h4 align="center">As of: {{ system.timestamp(True) }}</h4>
 
 <h3 align="left">PASTA Server Infrastructure</h3>
 <table class="table table-bordered">
@@ -11,15 +12,21 @@
     </tr>
     <tr>
         <td align="center">Production</td>
-        <td class="{{ status['production'][0] }}">{{ status['production'][1] }}</td>
+        <td class="{{ system.tier_status('PRODUCTION')[0] }}">
+                {{ system.tier_status('PRODUCTION')[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">Staging</td>
-        <td class="{{ status['staging'][0] }}">{{ status['staging'][1] }}</td>
+        <td class="{{ system.tier_status('STAGING')[0] }}">
+                {{ system.tier_status('STAGING')[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">Development</td>
-        <td class="{{ status['development'][0] }}">{{ status['development'][1] }}</td>
+        <td class="{{ system.tier_status('DEVELOPMENT')[0] }}">
+                {{ system.tier_status('DEVELOPMENT')[1] }}
+        </td>
     </tr>
 </table>
 
@@ -31,15 +38,21 @@
     </tr>
     <tr>
         <td align="center">Production</td>
-        <td class="{{ status['edi_portal'][0] }}">{{ status['edi_portal'][1] }}</td>
+        <td class="{{ system.server_status(servers['PORTAL_EDI'])[0] }}">
+                {{ system.server_status(servers['PORTAL_EDI'])[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">Staging</td>
-        <td class="{{ status['edi_portal_s'][0] }}">{{ status['edi_portal_s'][1] }}</td>
+        <td class="{{ system.server_status(servers['PORTAL_S_EDI'])[0] }}">
+                {{ system.server_status(servers['PORTAL_S_EDI'])[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">Development</td>
-        <td class="{{ status['edi_portal_d'][0] }}">{{ status['edi_portal_d'][1] }}</td>
+        <td class="{{ system.server_status(servers['PORTAL_D_EDI'])[0] }}">
+                {{ system.server_status(servers['PORTAL_D_EDI'])[1] }}
+        </td>
     </tr>
 </table>
 
@@ -51,15 +64,21 @@
     </tr>
     <tr>
         <td align="center">Production</td>
-        <td class="{{ status['lter_portal'][0] }}">{{ status['lter_portal'][1] }}</td>
+        <td class="{{ system.server_status(servers['PORTAL_LTER'])[0] }}">
+                {{ system.server_status(servers['PORTAL_LTER'])[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">Staging</td>
-        <td class="{{ status['lter_portal_s'][0] }}">{{ status['lter_portal_s'][1] }}</td>
+        <td class="{{ system.server_status(servers['PORTAL_S_LTER'])[0] }}">
+                {{ system.server_status(servers['PORTAL_S_LTER'])[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">Development</td>
-        <td class="{{ status['lter_portal_d'][0] }}">{{ status['lter_portal_d'][1] }}</td>
+        <td class="{{ system.server_status(servers['PORTAL_D_LTER'])[0] }}">
+                {{ system.server_status(servers['PORTAL_D_LTER'])[1] }}
+        </td>
     </tr>
 </table>
 
@@ -71,11 +90,15 @@
     </tr>
     <tr>
         <td align="center">Production</td>
-        <td class="{{ status['edi_gmn'][0] }}">{{ status['edi_gmn'][1] }}</td>
+        <td class="{{ system.server_status(servers['GMN_EDI'])[0] }}">
+                {{ system.server_status(servers['GMN_EDI'])[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">Staging</td>
-        <td class="{{ status['edi_gmn_s'][0] }}">{{ status['edi_gmn_s'][1] }}</td>
+        <td class="{{ system.server_status(servers['GMN_S_EDI'])[0] }}">
+                {{ system.server_status(servers['GMN_S_EDI'])[1] }}
+        </td>
     </tr>
 </table>
 
@@ -87,11 +110,15 @@
     </tr>
     <tr>
         <td align="center">Production</td>
-        <td class="{{ status['lter_gmn'][0] }}">{{ status['lter_gmn'][1] }}</td>
+        <td class="{{ system.server_status(servers['GMN_LTER'])[0] }}">
+                {{ system.server_status(servers['GMN_LTER'])[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">Staging</td>
-        <td class="{{ status['lter_gmn_s'][0] }}">{{ status['lter_gmn_s'][1] }}</td>
+        <td class="{{ system.server_status(servers['GMN_S_LTER'])[0] }}">
+                {{ system.server_status(servers['GMN_S_LTER'])[1] }}
+        </td>
     </tr>
 </table>
 
@@ -101,21 +128,29 @@
         <th width="20%" style="text-align: center">Service</th>
         <th style="text-align: center">Status</th>
     </tr>
-    <tr>
+     <tr>
         <td align="center">EDI LDAP</td>
-        <td class="{{ status['edi_ldap'][0] }}">{{ status['edi_ldap'][1] }}</td>
+        <td class="{{ system.server_status(servers['LDAP_EDI'])[0] }}">
+                {{ system.server_status(servers['LDAP_EDI'])[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">LTER LDAP</td>
-        <td class="{{ status['lter_ldap'][0] }}">{{ status['lter_ldap'][1] }}</td>
+        <td class="{{ system.server_status(servers['LDAP_LTER'])[0] }}">
+                {{ system.server_status(servers['LDAP_LTER'])[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">Unit Registry</td>
-        <td class="{{ status['unit_registry'][0] }}">{{ status['unit_registry'][1] }}</td>
+        <td class="{{ system.server_status(servers['UNIT'])[0] }}">
+                {{ system.server_status(servers['UNIT'])[1] }}
+        </td>
     </tr>
     <tr>
         <td align="center">Controlled Vocabulary</td>
-        <td class="{{ status['controlled_vocabulary'][0] }}">{{ status['controlled_vocabulary'][1] }}</td>
+        <td class="{{ system.server_status(servers['VOCAB'])[0] }}">
+                {{ system.server_status(servers['VOCAB'])[1] }}
+        </td>
     </tr>
 </table>
 
