Rename "State of Health at a glance" to simply "Health at a glance"

--- a/webapp/health/templates/glance.html
+++ b/webapp/health/templates/glance.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block app_content %}
-<h1 align="center">State of Health at a glance</h1>
+<h1 align="center">Health at a glance</h1>
 <h4 align="center">As of: {{ system.timestamp(True) }}</h4>
 
 <h3 align="left">PASTA Server Infrastructure</h3>
