--- a/webapp/health/templates/glance.html
+++ b/webapp/health/templates/glance.html
@@ -7,7 +7,7 @@
 
 {% block app_content %}
 <h1 align="center">Health at a glance</h1>
-<h4 align="center">As of: {{ system.timestamp(True) }}</h4>
+<h4 align="center">As of: {{ system.timestamp(local=True) }}</h4>
 
 <h3 align="left">PASTA Server Infrastructure</h3>
 <table class="table table-bordered">
