--- a/webapp/health/templates/server.html
+++ b/webapp/health/templates/server.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-<h3 align="left">{{ server }} as of: {{ system.timestamp(local=True) }}</h3>
+<h3 align="left">{% filter upper %}{{ server }}{% endfilter %} as of: {{ system.timestamp(local=True) }}</h3>
 <table class="table table-bordered">
     <tr>
         <th width="20%" style="text-align: center">Assertion</th>
