Remove unnecessary titles in menu

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -31,12 +31,14 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="{{ url_for('reports.render_no_public') }}"
-                               title="No public access">No public access</a>
+                            <a href="{{ url_for('reports.render_no_public') }}">
+                                No public access
+                            </a>
                         </li>
                         <li>
-                            <a href="{{ url_for('reports.render_offline') }}"
-                               title="Offline data">Offline data</a>
+                            <a href="{{ url_for('reports.render_offline') }}">
+                                Offline data
+                            </a>
                         </li>
                     </ul>
                 </li>
@@ -48,8 +50,9 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="{{ url_for('health.glance') }}"
-                               title="No public access">Health at a glance</a>
+                            <a href="{{ url_for('health.glance') }}">
+                                Health at a glance
+                            </a>
                         </li>
                     </ul>
                 </li>
