--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -59,6 +59,20 @@
                 <li class="dropdown">
                     <a aria-expanded="false" aria-haspopup="true"
                        class="dropdown-toggle" data-toggle="dropdown" href="#"
+                       role="button">PASTA
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="{{ url_for('pasta.render_working_on') }}">
+                                Working On
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a aria-expanded="false" aria-haspopup="true"
+                       class="dropdown-toggle" data-toggle="dropdown" href="#"
                        role="button">EDI Portals
                         <span class="caret"></span>
                     </a>
