--- a/webapp/pasta/templates/working_on.html
+++ b/webapp/pasta/templates/working_on.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
+{% block metas %}
+{{ super() }}
+    <meta http-equiv="refresh" content="300">
+{% endblock %}
+
 {% block app_content %}
-    <h1>PASTA is Working On:</h1>
+<h1 align="center">PASTA is Working On</h1>
 
     <h2>Production Tier</h2>
     <table class="table table-striped">
