--- a/webapp/pasta/templates/working_on.html
+++ b/webapp/pasta/templates/working_on.html
@@ -7,6 +7,7 @@
 
 {% block app_content %}
 <h1 align="center">PASTA is Working On</h1>
+<h4 align="center">As of: {{ datetime_str }}</h4>
 
     <h2>Production Tier</h2>
     <table class="table table-striped">
