--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -64,6 +64,11 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
+                            <a href="{{ url_for('reservations.render_reservations') }}">
+                                Reservations
+                            </a>
+                        </li>
+                        <li>
                             <a href="{{ url_for('pasta.render_working_on') }}">
                                 Working On
                             </a>
