Add auth html templates

--- a/webapp/auth/templates/reset_ldap_password.html
+++ b/webapp/auth/templates/reset_ldap_password.html
@@ -1,11 +1,31 @@
-{% extends "base.html" %}
+{% extends 'bootstrap/base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block app_content %}
-    <h1>Reset EDI LDAP User Password</h1>
+{% block title %}
+{% if title %}{{ title }} - EDI Dashboard{% endif %}
+{% endblock %}
+
+{% block content %}
+<div class="container">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <br/><br/>
+    <div class="alert alert-info" role="alert">{{ message }}</div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+
+    {# application content needs to be provided in the app_content block #}
+    {% block app_content %}
+    <h1>Reset EDI User Password</h1>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
         </div>
     </div>
+    {% endblock %}
+
+</div>
+
 {% endblock %}
